--- a/project.properties
+++ b/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=android-20
-android.library.reference.1=..\\Secretary_Android_Easeui
+android.library.reference.1=../../git/Secretary_Android_Easeui
