--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" standalone="no"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.meijialife.simi"
-    android:versionCode="3"
-    android:versionName="1.4.0" >
+    android:versionCode="4"
+    android:versionName="1.5.0" >
 
     <uses-sdk
         android:minSdkVersion="11"
@@ -794,6 +794,10 @@
               android:configChanges="orientation"
               android:theme="@style/ImageScale" >
        	</activity>
+       	<activity
+            android:name="com.meijialife.simi.activity.PartnerActivity"
+            >
+        </activity>
     </application>
 
 </manifest>
