--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" standalone="no"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.meijialife.simi"
-    android:versionCode="4"
-    android:versionName="1.5.0" >
+    android:versionCode="5"
+    android:versionName="1.5.1" >
 
     <uses-sdk
         android:minSdkVersion="11"
@@ -12,6 +12,9 @@
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <!--扫描二维码权限-->
+    <uses-permission android:name="android.permission.VIBRATE" />
+    
     
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
@@ -810,6 +813,16 @@
         <activity
             android:name="com.meijialife.simi.activity.PayZeroOrderActivity"
             android:screenOrientation="portrait"
+            >
+        </activity>
+        <!--configChanges
+        	配置该属性之后横竖屏切换的时候直接调用onCreate方法中的onConfigurationChanged()。不会使用onCreate()方法
+        -->
+        <activity
+            android:name="com.meijialife.simi.zxing.code.MipcaActivityCapture"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden"
             >
         </activity>
     </application>
