--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" standalone="no"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.meijialife.simi"
-    android:versionCode="7"
-    android:versionName="1.5.3" >
+    android:versionCode="8"
+    android:versionName="1.5.4" >
 
     <uses-sdk
         android:minSdkVersion="11"
@@ -286,6 +286,11 @@
         <!-- 联系人列表 -->
         <activity
             android:name=".activity.ContactSelectActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden|adjustResize" />
+       	<!-- 卡片中选择联系人-->
+        <activity
+            android:name=".activity.ContactChooseActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustResize" />
         <activity
