--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" standalone="no"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.meijialife.simi"
-    android:versionCode="8"
-    android:versionName="1.5.4" >
+    android:versionCode="10"
+    android:versionName="1.5.6" >
 
     <uses-sdk
         android:minSdkVersion="11"
@@ -819,6 +819,24 @@
         <activity
             android:name="com.meijialife.simi.activity.PayZeroOrderActivity"
             android:screenOrientation="portrait"
+            >
+        </activity>
+         <activity
+            android:name="com.meijialife.simi.activity.ApplicationsCenterActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustResize"
+            >
+        </activity>
+        <activity
+            android:name="com.meijialife.simi.activity.WebViewsActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden|adjustResize"
+            >
+        </activity>
+        <activity
+            android:name="com.meijialife.simi.activity.SearchViewActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateVisible|adjustResize"
             >
         </activity>
         <!--configChanges
