--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -657,13 +657,17 @@
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
 
         <!-- 提醒的接收器 -->
-        
-          <!--    <receiver
+
+
+        <!--
+            <receiver
             android:name="com.meijialife.simi.alerm.AlermReceiver"
-            android:process=":newinst" /> -->
+            android:process=":newinst" />
+        -->
         <receiver
             android:name="com.meijialife.simi.alerm.AlermReceiver"
             android:process=":remote" />
+
         <service android:name="com.meijialife.simi.broadcastReceiver.ServiceManager" >
         </service>
 
@@ -839,7 +843,7 @@
         </activity>
         <!--
             configChanges
-        	配置该属性之后横竖屏切换的时候直接调用onCreate方法中的onConfigurationChanged()。不会使用onCreate()方法
+        	配置该属性之后横竖屏切换的时候直接调用onCreate方法中的onConfigurationChanged()。不会使用onCreate()方法
         -->
         <activity
             android:name="com.meijialife.simi.zxing.code.MipcaActivityCapture"
@@ -862,22 +866,46 @@
         <activity
             android:name="com.meijialife.simi.activity.CardAlertActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden|stateAlwaysHidden" 
-            >
+            android:windowSoftInputMode="stateHidden|stateAlwaysHidden" >
         </activity>
-        <!--发布动态activity-->
+        <!-- 发布动态activity -->
         <activity
             android:name="com.meijialife.simi.publish.PublishDynamicActivity"
-            android:screenOrientation="portrait"
             android:launchMode="singleTask"
-            >
+            android:screenOrientation="portrait" >
         </activity>
-        <!--动态详情activity-->
+        <!-- 动态详情activity -->
         <activity
             android:name="com.meijialife.simi.activity.DynamicDetailsActivity"
-            android:screenOrientation="portrait"
-            >
+            android:screenOrientation="portrait" >
         </activity>
+        <!-- 动态图片浏览 -->
+        <activity
+            android:name="com.meijialife.simi.publish.GalleryActivity"
+            android:screenOrientation="portrait" >
+        </activity>
+        <!--动态相册-->
+        <activity
+            android:name="com.meijialife.simi.publish.AlbumActivity"
+            android:screenOrientation="portrait" >
+        </activity>
+        <!--动态相册-->
+        <activity
+            android:name="com.meijialife.simi.publish.ImageFile"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name="com.meijialife.simi.publish.ShowAllPhoto"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name="com.meijialife.simi.publish.GalleryUrlActivity"
+             android:configChanges="orientation"
+            android:theme="@style/ImageScale">
+        </activity>
+        <!--动态结束-->
+        
+        
     </application>
 
 </manifest>
