--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" standalone="no"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.meijialife.simi"
-    android:versionCode="12"
-    android:versionName="1.5.8" >
+    android:versionCode="13"
+    android:versionName="1.5.9" >
 
     <uses-sdk
         android:minSdkVersion="11"
@@ -869,7 +869,9 @@
         <activity
             android:name="com.meijialife.simi.activity.CardAlertActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden|stateAlwaysHidden" >
+            android:windowSoftInputMode="stateHidden|stateAlwaysHidden"
+            android:launchMode="singleInstance"
+             >
         </activity>
         <!-- 发布动态activity -->
         <activity
