--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" standalone="no"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.meijialife.simi"
-    android:versionCode="14"
-    android:versionName="1.6.0" >
+    android:versionCode="15"
+    android:versionName="1.6.1" >
 
     <uses-sdk
         android:minSdkVersion="11"
@@ -848,12 +848,6 @@
             configChanges
         	配置该属性之后横竖屏切换的时候直接调用onCreate方法中的onConfigurationChanged()。不会使用onCreate()方法
         -->
-        <activity
-            android:name="com.meijialife.simi.zxing.code.MipcaActivityCapture"
-            android:configChanges="orientation|keyboardHidden"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateAlwaysHidden" >
-        </activity>
         <!-- 发现详情页面 -->
         <activity
             android:name="com.meijialife.simi.activity.Find2DetailActivity"
@@ -912,6 +906,14 @@
         <activity
             android:name="com.meijialife.simi.publish.ImagePagerActivity"
              android:configChanges="orientation"
+           	 android:windowSoftInputMode="stateHidden|stateAlwaysHidden"
+           >
+        </activity>
+        <!--二维码扫描 -->
+        <activity
+            android:name="com.zbar.lib.CaptureActivity"
+             android:configChanges="orientation"
+             android:screenOrientation="portrait"
            	 android:windowSoftInputMode="stateHidden|stateAlwaysHidden"
            >
         </activity>
