--- a/project.properties
+++ b/project.properties
@@ -14,3 +14,4 @@
 
 target=android-21
 android.library.reference.1=..\\meijia-lib-easeui
+android.library.reference.2=../base_library_pullToRefresh_chenyoca
