--- a/project.properties
+++ b/project.properties
@@ -11,7 +11,8 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-
 target=android-21
 android.library.reference.1=..\\meijia-lib-easeui
 android.library.reference.2=../base_library_pullToRefresh_chenyoca
+dex.force.jumbo=true
+
