--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" standalone="no"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.meijialife.simi"
-    android:versionCode="17"
-    android:versionName="1.7.2" >
+    android:versionCode="19"
+    android:versionName="2.0.0" >
 
     <uses-sdk
         android:minSdkVersion="11"
@@ -923,6 +923,22 @@
              android:configChanges="orientation"
              android:screenOrientation="portrait"
            	 android:windowSoftInputMode="stateHidden|stateAlwaysHidden"
+           >
+        </activity>
+        <!-- 加号签到-->
+        <activity
+            android:name="com.meijialife.simi.activity.MainPlusSignInActivity"
+             android:configChanges="orientation"
+             android:screenOrientation="portrait"
+           	 android:windowSoftInputMode="stateHidden|stateAlwaysHidden"
+           >
+        </activity>
+        <!--加号打卡签到-->
+        <activity
+            android:name="com.meijialife.simi.activity.MainPlusSignActivity"
+             android:configChanges="orientation"
+             android:screenOrientation="portrait"
+           	 android:windowSoftInputMode="adjustPan"
            >
         </activity>
     </application>
