--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -941,6 +941,13 @@
            	 android:windowSoftInputMode="adjustPan"
            >
         </activity>
+        <activity
+            android:name="com.meijialife.simi.activity.CardListActivity"
+             android:configChanges="orientation"
+             android:screenOrientation="portrait"
+           	 android:windowSoftInputMode="stateHidden|stateAlwaysHidden"
+           >
+        </activity>
     </application>
 
 </manifest>
