--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" standalone="no"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.meijialife.simi"
-    android:versionCode="22"
-    android:versionName="2.1.0" >
+    android:versionCode="23"
+    android:versionName="2.1.1" >
 
     <uses-sdk
         android:minSdkVersion="11"
@@ -1090,7 +1090,23 @@
             android:name="com.meijialife.simi.activity.MainPlusExpressOrderActivity"
              android:configChanges="orientation"
              android:screenOrientation="portrait"
-           	 android:windowSoftInputMode="stateHidden|stateAlwaysHidden"
+           	 android:windowSoftInputMode="adjustResize|stateHidden"
+           >
+        </activity>
+        <!--企业列表设置默认  -->
+        <activity
+            android:name="com.meijialife.simi.activity.CompanyListsActivity"
+             android:configChanges="orientation"
+             android:screenOrientation="portrait"
+           	 android:windowSoftInputMode="adjustResize|stateHidden"
+           >
+        </activity>
+        <!--会议室列表  -->
+        <activity
+            android:name="com.meijialife.simi.activity.MeetingListActivity"
+             android:configChanges="orientation"
+             android:screenOrientation="portrait"
+           	 android:windowSoftInputMode="adjustResize|stateHidden"
            >
         </activity>
         <!--汽车牌照提醒  -->
